--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "dependencies": {
     "electron-prebuilt": "^1.2.7",
+    "lodash": "^4.13.1",
     "menubar": "^5.0.0"
   }
 }
