Better name and custom time cta

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "timestop",
-  "productName": "timestop",
+  "name": "time_s_up",
+  "productName": "time_s_up",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
