--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "license": "MIT",
   "dependencies": {
     "electron-prebuilt": "^1.2.7",
+    "jsonfile": "^2.3.1",
     "lodash": "^4.13.1",
-    "menubar": "^5.0.0"
+    "menubar": "^5.0.0",
+    "moment": "^2.14.1"
   }
 }
