--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "electron-prebuilt": "^1.3.1",
-    "jsonfile": "^2.3.1",
-    "lodash": "^4.14.1",
-    "menubar": "^5.1.0",
-    "moment": "^2.14.1"
+    "electron-prebuilt": "1.4.13",
+    "jsonfile": "2.4.0",
+    "lodash": "4.17.4",
+    "menubar": "5.2.3",
+    "moment": "2.17.1"
+  },
+  "devDependencies": {
+    "expect.js": "^0.3.1",
+    "mocha": "^3.2.0"
   }
 }
