--- a/package.json
+++ b/package.json
@@ -10,14 +10,13 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "electron-prebuilt": "1.4.13",
-    "jsonfile": "2.4.0",
+    "jsonfile": "4.0.0",
     "lodash": "4.17.4",
     "menubar": "5.2.3",
-    "moment": "2.17.1"
+    "moment": "2.19.1"
   },
   "devDependencies": {
-    "expect.js": "^0.3.1",
+    "electron": "1.7.9",
     "mocha": "^3.2.0"
   }
 }
